<resources>
    <string name="app_name">Expense Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="clear">C</string>
    <string name="decimal">.</string>
    <string name="arr">\u2190</string>
    <string name="n9">9</string>
    <string name="n8">8</string>
    <string name="n7">7</string>
    <string name="n6">6</string>
    <string name="n5">5</string>
    <string name="n4">4</string>
    <string name="n3">3</string>
    <string name="n2">2</string>
    <string name="n1">1</string>
    <string name="n0">0</string>

</resources>
